# controllers/delete_user.go
@@ -1,42 +1,0 @@
-package controllers
-
-import (
-	"crud-backend/models"
-	"crud-backend/utils"
-	"net/http"
-
-	"github.com/gin-gonic/gin"
-)
-
-// @Description Delete a user by ID
-// @Tags Users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Success 200 {object} utils.Response "User deleted successfully"
-// @Router /users/delete/{id} [delete]
-func DeleteUser(ctx *gin.Context) {
-	id := ctx.Param("id")
-
-	if id == "" {
-		ctx.JSON(http.StatusBadRequest, utils.Response{
-			Success: false,
-			Message: "User ID is required",
-		})
-		return
-	}
-
-	err := models.HandleDeleteUser(id)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.Response{
-			Success: false,
-			Message: "Failed to delete user",
-		})
-		return
-	}
-
-	ctx.JSON(http.StatusOK, utils.Response{
-		Success: true,
-		Message: "User deleted successfully",
-	})
-}
