# docs/swagger.yaml
@@ -11,6 +11,17 @@ definitions:
       username:
         type: string
     type: object
+  dto.UpdateUserRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      username:
+        type: string
+    type: object
   utils.Response:
     properties:
       message:
@@ -27,7 +38,7 @@ info:
   description: This is a CRUD API for managing users.
   version: "1.0"
 paths:
-  /users/create:
+  /users:
     post:
       consumes:
       - application/json
@@ -48,7 +59,7 @@ paths:
             $ref: '#/definitions/utils.Response'
       tags:
       - Users
-  /users/delete/{id}:
+  /users/{id}:
     delete:
       consumes:
       - application/json
@@ -68,7 +79,6 @@ paths:
             $ref: '#/definitions/utils.Response'
       tags:
       - Users
-  /users/detail/{id}:
     get:
       consumes:
       - application/json
@@ -84,6 +94,31 @@ paths:
       responses:
         "200":
           description: User detail retrieved successfully
+          schema:
+            $ref: '#/definitions/utils.Response'
+      tags:
+      - Users
+    patch:
+      consumes:
+      - application/json
+      description: Update a user by ID (partial update)
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User object to be updated
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User updated successfully
           schema:
             $ref: '#/definitions/utils.Response'
       tags:
