# dto/users.dto.go
@@ -6,3 +6,9 @@ type CreateUserRequest struct {
     Phone    string `json:"phone" form:"phone"`
     Password string `json:"password" form:"password"`
 }
+type UpdateUserRequest struct {
+    Username *string `json:"username,omitempty"`
+    Email    *string `json:"email,omitempty"`
+    Phone    *string `json:"phone,omitempty"`
+    Password *string `json:"password,omitempty"`
+}
