# routers/users.go
@@ -7,7 +7,8 @@ import (
 
 func usersRouter(r *gin.RouterGroup) {
 	r.GET("/list-all", controllers.ListAllUsers)
-	r.GET("/detail/:id", controllers.DetailUser)
-	r.POST("/create", controllers.CreateUser)
-	r.DELETE("/delete/:id", controllers.DeleteUser)
+	r.GET("/:id", controllers.DetailUser)
+	r.POST("", controllers.CreateUser)
+	r.DELETE("/:id", controllers.DeleteUser)
+	r.PATCH("/:id", controllers.UpdateUser)
 }
